Bug 321642 - last of multiple attachments is ignored
Summary: last of multiple attachments is ignored
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.11 beta1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-26 15:35 UTC by qqqqqqqqq9
Modified: 2013-06-26 17:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2013-06-26 15:35:57 UTC
When on tries to attach e.g. 3 files at once only the first 2 are attached.

Reproducible: Always

Steps to Reproduce:
1. Click "add attachment"
2. Select files a b c
3. The name field reads "a""b""c
4. note the missing "
5. click ok
Actual Results:  
Files a and b are attached. 

Expected Results:  
Files a, b, and c are attached.
Comment 1 Laurent Montel 2013-06-26 16:48:18 UTC
I confirm it.
it's a kdelibs bug
Comment 2 David Faure 2013-06-26 17:00:43 UTC
Git commit bb78ff2cb313bd7ad1d13b6f1519fb547aacbe7a by David Faure.
Committed on 26/06/2013 at 17:02.
Pushed by dfaure into branch 'KDE/4.10'.

Restore the space between the selected filenames.

Was a bug in my previous commit to this file.
FIXED-IN: 4.10.5

M  +1    -1    kfile/kfilewidget.cpp

http://commits.kde.org/kdelibs/bb78ff2cb313bd7ad1d13b6f1519fb547aacbe7a