Restore the space between the selected filenames.

Was a bug in my previous commit to this file.
FIXED-IN: 4.10.5
BUG: 321642